# stlish

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: contributing.md
docs/vector/: api_map.md  complexity.md  exception_safety.md  invariants.md  iterator_invalidation.md  spec.md
examples/: CMakeLists.txt  array_demo.cpp  demo_vector_basics.cpp  demo_vector_perf.cpp
include/stlish/: array.hpp  forward_list.hpp  iterator.hpp  vector.hpp
tests/: CMakeLists.txt  array_test.cpp  test_forward_list.cpp  test_smoke.cpp  test_vector_api.cpp  test_vector_clear_lifetime.cpp  test_vector_constructors.cpp  test_vector_exceptions.cpp  test_vector_invariants.cpp  test_vector_iterators.cpp  test_vector_smoke.cpp
